--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build",
+    "vercel-preview": "vite preview --port $PORT"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -60,6 +62,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "vite-plugin-pwa": "^1.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
